# FactCheker

./: .buildinfo  .env.example  .gitignore  .semgrepignore  LICENSE.txt  Makefile  Procfile  Procfile.dev  README.md  bandit_report.html  bandit_report.txt  database.html  genindex.html  handlers.html  index.html  main.html  main.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  safety_full.txt  search.html  searchindex.js  services.html  utils.html
.doctrees/: database.doctree  environment.pickle  handlers.doctree  index.doctree  main.doctree  services.doctree  utils.doctree
.github/workflows/: docs.yml
_modules/: index.html  main.html
_modules/database/: db_manager.html
_modules/handlers/: callback_handlers.html  command_handlers.html  message_handlers.html
_modules/services/: ai_service.html  search_service.html
_modules/utils/: helpers.html  keyboards.html  logger.html
_sources/: database.rst.txt
database/: db_manager.py
docs/: deployment.md  generate_docs.md  linting.md  update.md
docs/source/: conf.py  handlers.rst  main.rst
docs/source_en/: conf.py  database.rst  handlers.rst  index.rst  main.rst  services.rst  utils.rst
en/: genindex.html  index.html  main.html  objects.inv  search.html  searchindex.js  services.html  utils.html
en/.doctrees/: environment.pickle  index.doctree  services.doctree  utils.doctree
en/_modules/: main.html
en/_modules/database/: db_manager.html
en/_modules/handlers/: callback_handlers.html  message_handlers.html
en/_modules/services/: ai_service.html
en/_sources/: index.rst.txt  services.rst.txt  utils.rst.txt
handlers/: callback_handlers.py  command_handlers.py  message_handlers.py
profiling/: __init__.py  cpu_profiler.py  db_profiler.py  memory_profiler.py  run_profiling.py  scenarios.py
scripts/: backup.sh  deploy.sh  dev.ps1  healthcheck.sh  lint.ps1  rollback.sh  start.sh  stop.sh  test.ps1
services/: ai_service.py  deepgram_service.py  search_service.py  threads_service.py
tests/: test_call_base_gpt.py  test_check_and_increment_limit.py  test_filter_sources.py  test_handle_message.py  test_log_ai_usage.py
uk/: database.html  genindex.html  handlers.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js  services.html  utils.html
uk/.doctrees/: database.doctree  environment.pickle  handlers.doctree  index.doctree  main.doctree  services.doctree  utils.doctree
uk/_modules/: index.html  main.html
utils/: helpers.py  keyboards.py  logger.py
(+24 files in other folders)
